# utmp-rs

./: Cargo.toml
.github/workflows/: rust.yml
raw/: Cargo.toml  dump_utmp.rs  lib.rs  x32.rs  x64.rs
src/: entry.rs  lib.rs  parse.rs
