[package]
name = "utmp-rs"
description = "Parsing utmp file"
keywords = ["utmp", "linux", "login"]
categories = ["os::unix-apis"]
version = "0.4.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/utmp-rs"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
time = "0.3"
libc = "0.2.153"
utmp-raw = { version = "0.4.0", path = "raw" }
thiserror = "1.0.58"
zerocopy = { version = "0.7", features = ["derive"] }

[workspace]
members = ["raw"]

[dev-dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]
